--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,10 @@
     rgba(179, 183, 184, 1) 0%,
     rgba(224, 224, 224, 1) 43%
   );
-  padding: 40px;
+  padding: 0 15px;
   margin: 0 auto;
+  width: 100%;
+  height: 100%;
 }
 div {
   display: flex;
@@ -27,7 +29,7 @@ h5,
 h6,
 p,
 ul {
-  /* margin: 0; */
+  margin: 0;
   padding: 0;
 }
 
