--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,10 @@
   height: 100%;
 }
 div {
-  display: flex;
-  flex-direction: column;
+  display: block;
+  /* flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 ul {
   list-style: none;
@@ -46,4 +46,20 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+button {
+  width: fit-content;
+  height: 35px;
+  background-color: #b390aa;
+  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  border-style: none;
+  border-radius: 8px;
+  color: #481e14;
+  font-size: 16px;
+}
+button:active,
+button:hover {
+  color: #0c134f;
+  background-color: #ffb3cb;
 }
