--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -14,6 +14,7 @@
     rgba(176, 82, 175, 0.2763699229691877) 52%,
     rgba(252, 70, 107, 1) 100%
   );
+  position: relative;
 
   box-shadow: 0px 2px 10px 1px var(--color-dark);
   border-bottom-left-radius: 10px;
