--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,8 +1,18 @@
 .form {
   display: flex;
   flex-direction: column;
+
   gap: 8px;
   width: 400px;
+
+  box-shadow: 5px 5px 15px 5px #000000;
+  box-shadow: 5px 5px 15px 5px #000000;
+  border-radius: 10px;
+  padding: 35px 15px;
+
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
 }
 .lable {
   display: flex;
@@ -12,4 +22,7 @@
 .input {
   width: 100%;
   height: 35px;
+}
+.button {
+  align-items: center;
 }
