--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,3 +1,9 @@
+.wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
 .form {
   font-size: 18px;
   font-weight: 400;
