--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -12,12 +12,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  gap: 16px;
+  gap: 14px;
   width: 350px;
-  margin-bottom: 30px;
-  border: grey solid 1px;
-  border-radius: 16px;
+
   padding: 20px;
+  border-radius: 16px;
+  background-color: #ececec;
   box-shadow: 0px 10px 13px -7px #000000, 5px 3px 15px 3px rgba(0, 0, 0, 0);
   box-shadow: 0px 10px 13px -7px #000000, 5px 3px 15px 3px rgba(0, 0, 0, 0);
 }
@@ -25,30 +25,24 @@
   width: 100%;
   height: 35px;
   border-style: none;
+  border-radius: 6px;
 }
 .input:hover,
 .input:focus {
   box-shadow: 5px 5px 15px 5px #000000;
   box-shadow: 5px 5px 15px 5px #000000;
 }
-.button {
-  font-size: 18px;
-  font-weight: 400;
 
-  border-radius: 16px;
-  color: white;
-  background-color: #1f4266;
-  height: 35px;
-  border-style: none;
-  box-shadow: 0px 10px 13px -7px #000000, 5px 3px 15px 3px rgba(0, 0, 0, 0);
-  box-shadow: 0px 10px 13px -7px #000000, 5px 3px 15px 3px rgba(0, 0, 0, 0);
+.input:last-of-type {
+  margin-bottom: 25px;
 }
-button:focus {
-  box-shadow: none;
+.button {
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 25px;
 }
-button:active {
-  box-shadow: none;
-}
+
 .error {
   color: red;
 }
