--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -12,9 +12,10 @@
   gap: 15px;
   width: 400px;
 
-  box-shadow: 5px 5px 15px 5px #000000;
-  box-shadow: 5px 5px 15px 5px #000000;
-  border-radius: 10px;
+  border-radius: 16px;
+  background-color: #ececec;
+  box-shadow: 0px 10px 13px -7px #000000, 5px 3px 15px 3px rgba(0, 0, 0, 0);
+  box-shadow: 0px 10px 13px -7px #000000, 5px 3px 15px 3px rgba(0, 0, 0, 0);
   padding: 35px 15px;
 
   position: absolute;
@@ -29,12 +30,19 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+.lable:last-of-type .input {
+  margin-bottom: 35px;
+}
 .input {
   width: 100%;
   height: 35px;
+  border-style: none;
+  border-radius: 6px;
 }
-.lable:last-of-type .input {
-  margin-bottom: 35px;
+.input:hover,
+.input:focus {
+  box-shadow: 5px 5px 15px 5px #000000;
+  box-shadow: 5px 5px 15px 5px #000000;
 }
 
 .button {
