--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -11,9 +11,10 @@
   gap: 15px;
   width: 400px;
 
-  box-shadow: 5px 5px 15px 5px #000000;
-  box-shadow: 5px 5px 15px 5px #000000;
-  border-radius: 10px;
+  border-radius: 16px;
+  background-color: #ececec;
+  box-shadow: 0px 10px 13px -7px #000000, 5px 3px 15px 3px rgba(0, 0, 0, 0);
+  box-shadow: 0px 10px 13px -7px #000000, 5px 3px 15px 3px rgba(0, 0, 0, 0);
   padding: 35px 15px;
 
   position: absolute;
@@ -31,14 +32,17 @@
 .input {
   width: 100%;
   height: 35px;
+  border-style: none;
+  border-radius: 6px;
 }
-.lable:last-of-type .input {
-  margin-bottom: 35px;
+
+.input:hover,
+.input:focus {
+  box-shadow: 5px 5px 15px 5px #000000;
+  box-shadow: 5px 5px 15px 5px #000000;
 }
 
 .button {
   display: block;
   margin: 0 auto;
-  padding: 10px 20px;
-  cursor: pointer;
 }
