--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,9 +1,9 @@
-/* .wrapper {
+.wrapper {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 55px;
 }
 
 .username {
   font-weight: 700;
-} */
+}
