--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,10 @@
     rgba(179, 183, 184, 1) 0%,
     rgba(224, 224, 224, 1) 43%
   );
-  padding: 0 15px;
+
   margin: 0 auto;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
 }
 div {
   display: block;
@@ -49,14 +49,18 @@ img {
 }
 button {
   width: fit-content;
-  height: 35px;
+  font-size: 18px;
+  font-weight: 500;
+  font-family: inherit;
+  cursor: pointer;
+
   background-color: #b390aa;
   box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
   box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
   border-style: none;
   border-radius: 8px;
-  color: #481e14;
-  font-size: 16px;
+  color: black;
+  padding: 10px;
 }
 button:active,
 button:hover {
