--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -1,31 +1,23 @@
 .imgBox {
+  background-image: url("../../assets/notFound.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 100vw;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
   position: relative;
-  background-color: #f0f0f0;
 
   margin: 0;
   padding: 0;
 }
 
-.imgBox img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: auto;
-  height: auto;
-  min-width: 100%;
-  min-height: 100%;
-  transform: translate(-50%, -50%);
-  object-fit: cover;
-}
-
 .imgBox h1 {
   position: absolute;
-  bottom: 35%;
+  bottom: 50%;
   left: 50%;
   transform: translateX(-50%);
   color: white;
